packages/react-native/cpp/derec_ffi.h


typedef struct DeRecProtocolHandle DeRecProtocolHandle;
typedef struct DeRecError {
  int32_t category;
  int32_t code;
  char *message;
  int32_t peer_status;
  char *peer_memo;
  uint32_t expected;
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct DeRecProtocolNewResult {
  struct DeRecError error;
  struct DeRecProtocolHandle *handle;
} DeRecProtocolNewResult;
typedef struct ChannelStoreCallbacks {
  void *user_data;
  int32_t (*load)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  uint64_t replica_id,
                  uint8_t **out_ptr,
                  size_t *out_len);
  int32_t (*save)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  uint64_t replica_id,
                  const uint8_t *bytes,
                  size_t len);
  int32_t (*remove)(void *user_data,
                    uint64_t secret_id,
                    uint64_t channel_id,
                    uint64_t replica_id,
                    uint32_t *out_existed);
  int32_t (*list_helpers)(void *user_data, uint64_t secret_id, uint8_t **out_ptr, size_t *out_len);
  int32_t (*list_replicas)(void *user_data, uint64_t secret_id, uint8_t **out_ptr, size_t *out_len);
  int32_t (*link_channel)(void *user_data, uint64_t secret_id, uint64_t a, uint64_t b);
  int32_t (*linked_channels)(void *user_data,
                             uint64_t secret_id,
                             uint64_t channel_id,
                             uint8_t **out_ptr,
                             size_t *out_len);
  void (*free_buffer)(void *user_data, uint8_t *ptr, size_t len);
} ChannelStoreCallbacks;
typedef struct SecretStoreCallbacks {
  void *user_data;
  int32_t (*load)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  uint32_t kind,
                  uint8_t **out_ptr,
                  size_t *out_len);
  int32_t (*save)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  uint32_t kind,
                  const uint8_t *bytes,
                  size_t len);
  int32_t (*remove)(void *user_data, uint64_t secret_id, uint64_t channel_id, uint32_t kind);
  void (*free_buffer)(void *user_data, uint8_t *ptr, size_t len);
} SecretStoreCallbacks;
typedef struct ShareStoreCallbacks {
  void *user_data;
  int32_t (*load)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  const uint8_t *versions_json_ptr,
                  size_t versions_json_len,
                  uint8_t **out_ptr,
                  size_t *out_len);
  int32_t (*load_many)(void *user_data,
                       uint64_t secret_id,
                       const uint8_t *channel_ids_json_ptr,
                       size_t channel_ids_json_len,
                       const uint8_t *versions_json_ptr,
                       size_t versions_json_len,
                       uint8_t **out_ptr,
                       size_t *out_len);
  int32_t (*load_all)(void *user_data,
                      uint64_t secret_id,
                      const uint8_t *channel_ids_json_ptr,
                      size_t channel_ids_json_len,
                      uint8_t **out_ptr,
                      size_t *out_len);
  int32_t (*latest_version)(void *user_data,
                            uint64_t secret_id,
                            uint32_t *out_has_version,
                            uint32_t *out_version);
  int32_t (*save)(void *user_data,
                  uint64_t secret_id,
                  uint64_t channel_id,
                  const uint8_t *share_json_ptr,
                  size_t share_json_len);
  int32_t (*remove_channel)(void *user_data, uint64_t secret_id, uint64_t channel_id);
  void (*free_buffer)(void *user_data, uint8_t *ptr, size_t len);
} ShareStoreCallbacks;
typedef struct UserSecretStoreCallbacks {
  void *user_data;
  int32_t (*load_latest)(void *user_data, uint64_t secret_id, uint8_t **out_ptr, size_t *out_len);
  int32_t (*save_latest)(void *user_data,
                         uint64_t secret_id,
                         const uint8_t *value_json_ptr,
                         size_t value_json_len);
  int32_t (*remove)(void *user_data, uint64_t secret_id);
  void (*free_buffer)(void *user_data, uint8_t *ptr, size_t len);
} UserSecretStoreCallbacks;
typedef struct StateStoreCallbacks {
  void *user_data;
  int32_t (*save)(void *user_data,
                  uint64_t secret_id,
                  const uint8_t *item_json_ptr,
                  size_t item_json_len);
  int32_t (*load)(void *user_data,
                  uint64_t secret_id,
                  const uint8_t *key_json_ptr,
                  size_t key_json_len,
                  uint8_t **out_ptr,
                  size_t *out_len);
  int32_t (*remove)(void *user_data,
                    uint64_t secret_id,
                    const uint8_t *key_json_ptr,
                    size_t key_json_len,
                    uint32_t *out_removed);
  int32_t (*load_all)(void *user_data,
                      uint64_t secret_id,
                      uint32_t kind,
                      uint8_t **out_ptr,
                      size_t *out_len);
  void (*free_buffer)(void *user_data, uint8_t *ptr, size_t len);
} StateStoreCallbacks;
typedef struct TransportCallbacks {
  void *user_data;
  int32_t (*send)(void *user_data,
                  const uint8_t *endpoints_ptr,
                  size_t endpoints_len,
                  const uint8_t *bytes,
                  size_t len);
} TransportCallbacks;
typedef struct DeRecRemovedChannelsResult {
  struct DeRecError error;
  struct DeRecBuffer channels;
} DeRecRemovedChannelsResult;
typedef struct DeRecProtocolEventsResult {
  struct DeRecError error;
  struct DeRecBuffer events_json;
} DeRecProtocolEventsResult;
typedef struct DeRecProtocolFingerprintResult {
  struct DeRecError error;
  char *fingerprint;
} DeRecProtocolFingerprintResult;
typedef struct DeRecProtocolCreateContactResult {
  struct DeRecError error;
  struct DeRecBuffer contact_wire_bytes;
} DeRecProtocolCreateContactResult;
struct DeRecProtocolNewResult derec_protocol_new(const uint8_t *config_json_ptr,
                                                 size_t config_json_len,
                                                 const uint8_t *communication_info_ptr,
                                                 size_t communication_info_len,
                                                 const struct ChannelStoreCallbacks *channel_store_cb,
                                                 const struct SecretStoreCallbacks *secret_store_cb,
                                                 const struct ShareStoreCallbacks *share_store_cb,
                                                 const struct UserSecretStoreCallbacks *user_secret_store_cb,
                                                 const struct StateStoreCallbacks *state_store_cb,
                                                 const struct TransportCallbacks *transport_cb);
void derec_protocol_free(struct DeRecProtocolHandle *handle);
struct DeRecRemovedChannelsResult derec_protocol_remove_expired_channels(struct DeRecProtocolHandle *handle,
                                                                         uint64_t older_than_secs);
struct DeRecProtocolEventsResult derec_protocol_start(struct DeRecProtocolHandle *handle,
                                                      uint32_t flow_kind,
                                                      const uint8_t *params_json_ptr,
                                                      size_t params_json_len);
struct DeRecProtocolEventsResult derec_protocol_process(struct DeRecProtocolHandle *handle,
                                                        const uint8_t *message_ptr,
                                                        size_t message_len);
struct DeRecProtocolEventsResult derec_protocol_tick(struct DeRecProtocolHandle *handle);
struct DeRecProtocolEventsResult derec_protocol_accept(struct DeRecProtocolHandle *handle,
                                                       const uint8_t *action_ptr,
                                                       size_t action_len);
struct DeRecError derec_protocol_reject(struct DeRecProtocolHandle *handle,
                                        const uint8_t *action_ptr,
                                        size_t action_len,
                                        int32_t status,
                                        const uint8_t *memo_ptr,
                                        size_t memo_len);
struct DeRecProtocolFingerprintResult derec_protocol_get_fingerprint(struct DeRecProtocolHandle *handle,
                                                                     uint64_t channel_id);
struct DeRecError derec_protocol_verify_fingerprint(struct DeRecProtocolHandle *handle,
                                                    uint64_t channel_id,
                                                    const char *fingerprint_ptr,
                                                    uint32_t *out_matched);
struct DeRecProtocolCreateContactResult derec_protocol_create_contact(struct DeRecProtocolHandle *handle,
                                                                      uint32_t has_channel_id,
                                                                      uint64_t channel_id,
                                                                      int32_t contact_mode,
                                                                      uint32_t has_nonce,
                                                                      uint64_t nonce);